--- a/src/styles.css
+++ b/src/styles.css
@@ -1,68 +1,96 @@
-  /* GLOBAL VARIABLES */
-  :root {
-    --font-color: hsla(360, 100%, 100%, 1);
-  }
+/* GLOBAL VARIABLES */
+:root {
+	--font-color: hsla(360, 100%, 100%, 1);
+}
 
 /* CSS RESET */
 
-*, *::before, *::after {
-    box-sizing: border-box;
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
 }
 
 * {
-    margin: 0;
+	margin: 0;
 }
 
 html {
-    color: var(--font-color);
-    background: radial-gradient(circle at center, hsl(0, 16%, 20%), hsl(0, 16%, 1%));
-    background-attachment: fixed;
-    background-size: 100vw 100vh;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-family: 'Roboto', sans-serif;
+	color: var(--font-color);
+	background: radial-gradient(circle at center, hsl(254, 100%, 20%), hsl(254, 100%, 2%));
+	background-attachment: fixed;
+	background-size: 100vw 100vh;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-family: 'Roboto', sans-serif;
+	font-size: 62.5%;
+	scroll-behavior: smooth;
 }
 
 html:focus-within {
-    scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
 
 body {
-    min-height: 100%;
-    min-height: 100vh;
-    min-height: 100dvh;
-    text-rendering: optimizeSpeed;
-    line-height: 1.5;
+	min-height: 100%;
+	min-height: 100vh;
+	min-height: 100dvh;
+	text-rendering: optimizeSpeed;
+	line-height: 1.5;
+	font-size: 1.6rem;
+	max-width: 1280px;
+	margin: 0 auto;
+	position: relative;
 }
 
-img, picture, video, canvas, svg {
-    display: block;
-    max-width: 100%;
+img,
+picture,
+video,
+canvas,
+svg {
+	display: block;
+	max-width: 100%;
 }
 
-input, button, textarea, select {
-    font: inherit;
+input,
+button,
+textarea,
+select {
+	font: inherit;
 }
 
-p, h1, h2, h3, h4, h5, h6 {
-    overflow-wrap: break-word;
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	overflow-wrap: break-word;
+}
+
+@media only screen and (max-width: 1280px) {
+	body {
+		padding: 0 1.2rem;
+	}
 }
 
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
-    html:focus-within {
-     scroll-behavior: auto;
-    }
-    
-    *,
-    *::before,
-    *::after {
-      -webkit-animation-duration: 0.01ms !important;
-              animation-duration: 0.01ms !important;
-      -webkit-animation-iteration-count: 1 !important;
-              animation-iteration-count: 1 !important;
-      transition-duration: 0.01ms !important;
-      scroll-behavior: auto !important;
-    }
-  }
+	html:focus-within {
+		scroll-behavior: auto;
+	}
+
+	*,
+	*::before,
+	*::after {
+		-webkit-animation-duration: 0.01ms !important;
+		animation-duration: 0.01ms !important;
+		-webkit-animation-iteration-count: 1 !important;
+		animation-iteration-count: 1 !important;
+		transition-duration: 0.01ms !important;
+		scroll-behavior: auto !important;
+	}
+}
 
 /* GLOBAL CLASSES */
